solved y scroll by body overflow hidden, now count of votes is an array

--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,7 @@ a{
   margin: 0 auto;
   overflow-x: hidden;
 }
+
+button{
+  cursor: pointer;
+}
