--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,14 +5,17 @@
     @include flex-complete($direction: row, $justify: center, $align: center);
     padding: 12px;
     background-color: greenyellow;
-    width:100%;
     height:3rem;
     margin: 0 auto;
     border-radius: 4px;
-    align-self: center;
+    width: 95%;
 
-    position: absolute;
-    top:100%;
+    @media only screen and (min-width: 500px){
+        width: 500px;
+    }
+
+    //position: absolute;
+    //top:100%;
     
     button{
         padding: 8px;
